--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body class="font-sans">
   <header>
     <!-- banner section -->
-    <section class="bg-[#F9F6E2] md:h-[873px] md:flex justify-around items-center m-auto">
+    <section class="bg-[#F9F6E2]  md:flex justify-around items-center">
       <div>
         <h3 class="text-center font-medium text-3xl mb-7">---SALE FEVER---</h3>
-        <h1 class="text- text-5xl font-bold mb-7">Purchase TK 200 or <br> above & get <span
-            class="text-pink-500">20% off</span></h1>
+        <h1 class="text- text-5xl font-bold mb-7">Purchase TK 200 or <br> above & get <span class="text-pink-500">20%
+            off</span></h1>
         <div class="flex items-center gap-3 ml-20">
           <h4 class="text-center text-lg ">Use Promo Code</h4>
           <button class="bg-pink-500 px-4 py-2 text-white rounded-lg">SELL200</button>
@@ -34,11 +34,11 @@
     <!-- card section -->
 
     <!-- Kitchenware -->
-    <section class=" mx-auto border-2 border-red-600">
+    <section class="w-9/12 mx-auto ml-6">
       <h1 class="font-sans text-4xl font-semibold mb-6">Kitchenware</h1>
       <!-- card one -->
       <div class="flex flex-col md:flex-row gap-4">
-        <div  onclick="addToCart(0)" class="card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(0)" class="w-96 p-3 card bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod1.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -50,12 +50,12 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
           <div class="card-body items-center text-center">
-            <h2 id="card-title" class="card-title">K.a  Accessories</h2>
+            <h2 id="card-title" class="card-title">K.a Accessories</h2>
             <p><span class="price">39.00</span> tk</p>
           </div>
         </div>
         <!-- card two -->
-        <div onclick="addToCart(1)" class="card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(1)" class="w-96 p-3 card bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod2.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -73,7 +73,7 @@
         </div>
 
         <!-- card three -->
-        <div onclick="addToCart(2)" class="card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(2)" class="w-96 p-3 card bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod3.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -92,11 +92,11 @@
       </div>
 
 
-<!-- Sportswear -->
+      <!-- Sportswear -->
       <h1 class="font-sans mt-4 text-4xl font-semibold mb-6">Sportswear</h1>
       <!-- card one -->
       <div class="flex flex-col md:flex-row gap-4">
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="p-3 card w-96 bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod5.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -114,7 +114,7 @@
         </div>
 
         <!-- card two -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="p-3 card w-96 bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod6.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -132,7 +132,7 @@
         </div>
 
         <!-- card three -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="p-3 card w-96 bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod4.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -154,7 +154,7 @@
       <h1 class="font-sans mt-4 text-4xl font-semibold mb-6">Furniture</h1>
       <!-- card one -->
       <div class="flex flex-col md:flex-row gap-4">
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="p-3 card w-96 bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod7.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -172,7 +172,7 @@
         </div>
 
         <!-- card two -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="p-3 card w-96 bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod8.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -190,7 +190,7 @@
         </div>
 
         <!-- card three -->
-        <div class="card w-96 bg-base-100 shadow-xl">
+        <div class="p-3 card w-96 bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod9.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -212,23 +212,24 @@
 
 
     <!-- coupon section -->
-    <section class="mr-5 border-2 border-green-700 mt-12">
-      <div class="w-[342px] h-[148px] bg-gray-100">
+    <section class="mr-5 w-96 p-3 mt-16">
+      <div class="p-5 w-[342px] h-[148px] bg-gray-100 rounded-xl">
         <h1 class="font-sans font-medium text-2xl py-3">Have coupon?</h1>
-        <input class="p-2 rounded-lg" type="text" name="" id="" placeholder="Coupon Code">
-        <button class="bg-pink-500 p-2 rounded-lg">Apply</button>
+        <input class="p-2 rounded-lg rounded-r-none relative" type="text" name="" id="" placeholder="Coupon Code">
+        <button class="bg-pink-500 p-2 rounded-lg rounded-l-none text-white absolute">Apply</button>
       </div>
       <div>
 
 
       </div>
       <hr>
-      <div class="font-sans font-medium text-2xl my-7">
+      <div class="p-5 h-72 relative bg-gray-100 font-sans font-medium text-2xl my-7">
         <p>Total Price: <span>00</span></p>
         <p>Discount: <span>00</span></p>
         <p>Total: <span>00</span></p>
+        <br>
         <hr>
-        <button class="bg-pink-600 p-4">Make Purchase</button>
+        <button class="-bottom-6 ml-6 absolute bg-pink-500 px-12 py-2 rounded-xl text-white">Make Purchase</button>
       </div>
     </section>
   </main>
