--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             off</span></h1>
         <div class="flex items-center gap-3 ml-20">
           <h4 class="text-center text-lg ">Use Promo Code</h4>
-          <button class="bg-pink-500 px-4 py-2 text-white rounded-lg">SELL200</button>
+          <button id="btn-sell" class="bg-pink-500 px-4 py-2 text-white rounded-lg">SELL200</button>
         </div>
       </div>
       <div>
@@ -30,15 +30,16 @@
       </div>
     </section>
   </header>
-  <main class="flex flex-col lg:flex-row justify-around mt-12 mb-12">
+  <main class="w-9/12 mx-auto flex flex-col lg:flex-row justify-around mt-12 mb-12 gap-4">
     <!-- card section -->
 
     <!-- Kitchenware -->
-    <section class="w-9/12 mx-auto ml-6">
+    <section class=" mx-auto">
       <h1 class="font-sans text-4xl font-semibold mb-6">Kitchenware</h1>
       <!-- card one -->
       <div class="flex flex-col md:flex-row gap-4">
-        <div onclick="addToCart(0)" class="w-96 p-3 card bg-base-100 shadow-xl">
+
+        <div onclick="addToCart(0)" class=" p-3 card bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod1.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -55,7 +56,7 @@
           </div>
         </div>
         <!-- card two -->
-        <div onclick="addToCart(1)" class="w-96 p-3 card bg-base-100 shadow-xl">
+        <div onclick="addToCart(1)" class=" p-3 card bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod2.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -73,7 +74,7 @@
         </div>
 
         <!-- card three -->
-        <div onclick="addToCart(2)" class="w-96 p-3 card bg-base-100 shadow-xl">
+        <div onclick="addToCart(2)" class=" p-3 card bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod3.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -96,7 +97,7 @@
       <h1 class="font-sans mt-4 text-4xl font-semibold mb-6">Sportswear</h1>
       <!-- card one -->
       <div class="flex flex-col md:flex-row gap-4">
-        <div class="p-3 card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(3)"  class="p-3 card  bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod5.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -109,12 +110,12 @@
           </div>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Full Jersey Set</h2>
-            <p><span>69.00</span> tk</p>
+            <p><span class="price">69.00</span> tk</p>
           </div>
         </div>
 
         <!-- card two -->
-        <div class="p-3 card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(4)"  class="p-3 card  bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod6.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -127,12 +128,12 @@
           </div>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Sports cates</h2>
-            <p><span>159.00</span> tk</p>
+            <p><span class="price">159.00</span> tk</p>
           </div>
         </div>
 
         <!-- card three -->
-        <div class="p-3 card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(5)"  class="p-3 card  bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod4.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -145,7 +146,7 @@
           </div>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Sports Back Cap</h2>
-            <p><span>49.00</span> tk</p>
+            <p><span class="price">49.00</span> tk</p>
           </div>
         </div>
       </div>
@@ -154,7 +155,7 @@
       <h1 class="font-sans mt-4 text-4xl font-semibold mb-6">Furniture</h1>
       <!-- card one -->
       <div class="flex flex-col md:flex-row gap-4">
-        <div class="p-3 card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(6)"  class="p-3 card  bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod7.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -167,12 +168,12 @@
           </div>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Single Relax Chair</h2>
-            <p><span>185.00</span> tk</p>
+            <p><span class="price">185.00</span> tk</p>
           </div>
         </div>
 
         <!-- card two -->
-        <div class="p-3 card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(7)"  class="p-3 card bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod8.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -185,12 +186,12 @@
           </div>
           <div class="card-body items-center text-center">
             <h2 class="card-title">Children play</h2>
-            <p><span>299.00</span> tk</p>
+            <p><span class="price">299.00</span> tk</p>
           </div>
         </div>
 
         <!-- card three -->
-        <div class="p-3 card w-96 bg-base-100 shadow-xl">
+        <div onclick="addToCart(8)"  class="p-3 card  bg-base-100 shadow-xl">
           <figure class="bg-gray-200 h-[250px] px-10 pt-10 mb-3">
             <img src="/images/prod9.png" alt="Shoes" class="rounded-xl" />
           </figure>
@@ -202,8 +203,8 @@
             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
           </div>
           <div class="card-body items-center text-center">
-            <h2 class="card-title">Flexible Sofa</h2>
-            <p><span>339.00</span> tk</p>
+            <h2 id="card-title" class="card-title">Flexible Sofa</h2>
+            <p><span class="price">339.00</span> tk</p>
           </div>
         </div>
       </div>
@@ -212,21 +213,22 @@
 
 
     <!-- coupon section -->
-    <section class="mr-5 w-96 p-3 mt-16">
+    <section class="mr-5 p-3 mt-16">
       <div class="p-5 w-[342px] h-[148px] bg-gray-100 rounded-xl">
         <h1 class="font-sans font-medium text-2xl py-3">Have coupon?</h1>
         <input class="p-2 rounded-lg rounded-r-none relative" type="text" name="" id="" placeholder="Coupon Code">
         <button class="bg-pink-500 p-2 rounded-lg rounded-l-none text-white absolute">Apply</button>
       </div>
-      <div>
+      <div id="list-item" class="text-xl font-medium my-4">
+        <ol id="order-list">
 
+        </ol>
 
       </div>
-      <hr>
-      <div class="p-5 h-72 relative bg-gray-100 font-sans font-medium text-2xl my-7">
-        <p>Total Price: <span>00</span></p>
-        <p>Discount: <span>00</span></p>
-        <p>Total: <span>00</span></p>
+      <div class="p-5 h-48 relative bg-gray-100 font-sans font-medium text-2xl my-7 rounded-xl">
+        <p>Total Price: <span id="total-price">00</span> tk</p>
+        <p>Discount: <span id="discount">00</span></p>
+        <p>Total: <span id="total">00</span></p>
         <br>
         <hr>
         <button class="-bottom-6 ml-6 absolute bg-pink-500 px-12 py-2 rounded-xl text-white">Make Purchase</button>
