--- a/index.html
+++ b/index.html
@@ -216,22 +216,24 @@
     <section class="mr-5 p-3 mt-16">
       <div class="p-5 w-[342px] h-[148px] bg-gray-100 rounded-xl">
         <h1 class="font-sans font-medium text-2xl py-3">Have coupon?</h1>
-        <input class="p-2 rounded-lg rounded-r-none relative" type="text" name="" id="" placeholder="Coupon Code">
-        <button class="bg-pink-500 p-2 rounded-lg rounded-l-none text-white absolute">Apply</button>
+        <input class="p-2 rounded-lg rounded-r-none relative" type="text" name="" id="coupon-code" placeholder="Coupon Code">
+        <button id="coupon-apply" class="bg-pink-500 p-2 rounded-lg rounded-l-none text-white absolute">Apply</button>
       </div>
-      <div id="list-item" class="text-xl font-medium my-4">
-        <ol id="order-list">
 
-        </ol>
+      <div class="p-5 relative bg-gray-100 font-sans font-medium text-2xl my-7 rounded-xl">
+        <div id="list-item" class="text-xl font-medium my-4 list-none">
 
-      </div>
-      <div class="p-5 h-48 relative bg-gray-100 font-sans font-medium text-2xl my-7 rounded-xl">
+
+        </div>
+        <hr>
         <p>Total Price: <span id="total-price">00</span> tk</p>
         <p>Discount: <span id="discount">00</span></p>
         <p>Total: <span id="total">00</span></p>
         <br>
         <hr>
-        <button class="-bottom-6 ml-6 absolute bg-pink-500 px-12 py-2 rounded-xl text-white">Make Purchase</button>
+       <div>
+        <button id="make-purchase" class="-bottom-6 ml-6 absolute bg-pink-500 px-12 py-2 rounded-xl text-white">Make Purchase</button>
+       </div>
       </div>
     </section>
   </main>
