--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     <section class="mr-5 p-3 mt-16">
       <div class="p-5 w-[342px] h-[148px] bg-gray-100 rounded-xl">
         <h1 class="font-sans font-medium text-2xl py-3">Have coupon?</h1>
-        <input  class="p-2 rounded-lg rounded-r-none relative" type="text" name="" id="coupon-code"
+        <input  class="p-2 border-none rounded-lg rounded-r-none relative" type="text" name="" id="coupon-code"
           placeholder="Coupon Code">
         <button id="coupon-apply" class="bg-pink-500 p-2 rounded-lg rounded-l-none text-white absolute">Apply</button>
       </div>
